--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-edge-driver</artifactId>
+			<artifactId>selenium-chromium-driver</artifactId>
+			<version>4.8.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
