Cambiado el Pom para la entrega

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>es.codeurjc.ais</groupId>
-	<artifactId>practica_1_testing</artifactId>
-	<version>0.1.0</version>
+	<artifactId>a.arcones2020-j.arellano2020</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
